SSNValidator.class init